--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "5432:5432"
     networks:
       - rails-network
+    volumes:
+      - db-postgres:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -38,3 +40,7 @@ services:
 networks:
   rails-network:
     driver: bridge
+
+volumes:
+  db-postgres: {}
+    
